--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1492,6 +1492,31 @@ ojo con este que se usa en varios lados */
     
 }
 
+.integrantes{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+}
+.contFoto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.intfoto{
+    width: 20vh;
+    height: 20vh;
+    border-radius: 50%;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+    transition: 1s all;
+}
+
+.intfoto:hover{
+    filter: grayscale(0%);
+}
+
 @media (min-width: 900px){
 
     .avatar{
@@ -1660,7 +1685,8 @@ ojo con este que se usa en varios lados */
 
     .btn--volver{
         height: 7vh;
-        width: 30%
+        width: 30%;
+        cursor: pointer;
     }
 
     .navBar__faq--carrito a{
@@ -2138,6 +2164,11 @@ ojo con este que se usa en varios lados */
     .item_borrar{
         font-size: .5rem;
     }
+    .integrantes{
+        flex-direction: row;
+        justify-content: space-between;
+    }
 } 
+
 
  /* esta llave es clave */
