--- a/src/views/sobre_nosotros.ejs
+++ b/src/views/sobre_nosotros.ejs
@@ -6,21 +6,38 @@
     <%-include('./partials/header.ejs')%>
 
     <main class="contenedorMain">
-     <article class="cont__snos">
-        <h2 class="titlG">Sobre nosotros</h2>
-    
-       <p class="parrafoG">
-                Digital Birra nació en el año 2020 como
-                el sueño de un grupo de
-                programadores de no solo desarrollar
-                apps sino también cerveza.
-                Hoy en día contamos con una variedad
-                de cervezas a base lúpulo. entre ellas
-                sus variantes rubia, roja, negra e IPA.
-                Siendo así la primera y única compañía
-                de desarrollo y cerveza del país.
-        </p>
+        <article class="cont__snos">
+                 <h2 class="titlG">Sobre nosotros</h2>
+            
+                  <section class="integrantes">
 
+                    <article class="contFoto">
+                        <img class="intfoto" src="img/avatars/moreko.jpeg" alt="Moreko">
+                        <label for="">Moreko</label>
+                    </article>
+                    <article  class="contFoto">
+                        <img class="intfoto" src="img/avatars/imagen-1610422216948.jpg" alt="Pat">
+                        <label for="">Patricio</label>
+                    </article>    
+                    <article  class="contFoto">
+                        <img class="intfoto" src="img/avatars/rod.jpg" alt="Rod">
+                        <label for="">Rod</label>
+                    </article>
+
+                   </section>
+            <p class="parrafoG">
+                     Digital Birra nació en el año 2020 como
+                     el sueño de un grupo de
+                     programadores de no solo desarrollar
+                     apps sino también cerveza.
+                     Hoy en día contamos con una variedad
+                     de cervezas a base lúpulo. entre ellas
+                     sus variantes rubia, roja, negra e IPA.
+                     Siendo así la primera y única compañía
+                     de desarrollo y cerveza del país.
+             </p>
+
+     
         <section class="cont__btn--volver">
             <button class="btn--volver">
                 <a class="volverInicio" href="/">Volver al inicio</a>
