arreglamos mw login

--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -50,7 +50,7 @@
                 </div>
                 <div>
                     <label for="laimagen">Avatar</label>
-                    <input type="file" name="imagen" id="laimagen">
+                    <input type="file" required name="imagen" id="laimagen">
                     <small></small>
                 </div>
                 <input class="reg--submit" type="submit" value=<%=typeof usuarioActivo.nombre != "undefined" ? "guardar" :  "Registrarme" %> autofocus>
