--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -9,13 +9,14 @@
 		
 
 		<main class="contenedorMain">
-
-			<p class="contenedorMain__links">ERROR</p> 
-			<p class="contenedorMain__links">Página no encontrada</p> 
-
+		<section class="contErrores">
+			<p class="contenedorMain__links">Lamentablemente esa página no existe</p>
+			<a href="/" class="contImgError"><img class="producto--err" src="img/errorBirra.png" alt="errorBirra"></a> 
+			
 			<button href="index" class="btn--volver">
                 <a class="volverInicio" href="/">Volver al inicio</a>
-        </button></a>
+			</button>
+		</section>
 
 	
 
