arreglo de editar perfil

--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -11,7 +11,7 @@
 		<main class="contenedorMain">
 		<section class="contErrores">
 			<p class="contenedorMain__links">Lamentablemente esa página no existe</p>
-			<a href="/" class="contImgError"><img class="producto--err" src="img/errorBirra.png" alt="errorBirra"></a> 
+			<a href="/" class="contImgError"><img class="producto--err" src="/img/errorBirra.png" alt="errorBirra"></a> 
 			
 			<button href="index" class="btn--volver">
                 <a class="volverInicio" href="/">Volver al inicio</a>
