--- a/src/views/products/modificar_producto.ejs
+++ b/src/views/products/modificar_producto.ejs
@@ -63,7 +63,7 @@
             <input class="reg--input" type="number" name="stock" placeholder="STOCK" id="stock" value="<%= typeof oldValues != "undefined" ? oldValues.stock : modifbirra.stock %>"autofocus required>
 
             <label for="laimagen">Imagen</label>
-            <input type="file" name="imagen" id="laimagen">
+            <input class="reg--input subirImg" type="file" name="imagen" id="laimagen" accept="image/*">
             <!-- Submit -->
             <input onclick="return confirm('¿Estás seguro que querés modificar este producto?');" class="reg--submit" type="submit" value="GUARDAR" autofocus>            
         
