sweetalert en eliminar producto

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,7 +8,7 @@
     <%-include('./partials/header.ejs')%>
 
     <main class="contenedorMain">
-        <article class="cont__portada">
+        <article class="cont__portada" id="eliminar">
             <section class="cont__img__titl">
                 <img class="portada--titl" src="/img/dBirra-titl.svg" alt="digital birra">
 
