--- a/src/views/products/modificar_producto.ejs
+++ b/src/views/products/modificar_producto.ejs
@@ -21,7 +21,7 @@
             </ul>
         <% } %> 
 
-        <form action="/products/modificarProducto/<%=modifbirra.id%>" method="POST" class="reg__form" enctype="multipart/form-data">
+        <form id="elFormModif" action="/products/modificarProducto/<%=modifbirra.id%>" method="POST" class="reg__form" enctype="multipart/form-data">
             <label for="nombre">Nombre</label>
             <input class="reg--input" type= "text" name="nombre" placeholder="NOMBRE DEL PRODUCTO" value="<%= typeof oldValues != "undefined" ? oldValues.nombre : modifbirra.nombre %>" autofocus required>
 
@@ -67,7 +67,7 @@
             <label for="laimagen">Imagen</label>
             <input class="reg--input subirImg" type="file" name="imagen" id="laimagen" accept="image/*">
             <!-- Submit -->
-            <input onclick="return confirm('¿Estás seguro que querés modificar este producto?');" class="reg--submit" type="submit" value="GUARDAR" autofocus>            
+            <input id="modificar" class="reg--submit" type="submit" value="GUARDAR" autofocus>            
         </form>
         <form id='elFormDelete' class="elFormDelete" action="/products/form/<%=modifbirra.id%>/borrar?_method=DELETE" method="POST">
             <input id="eliminar"  class="reg--submit--eliminar" type="submit" value="ELIMINAR" autofocus>
@@ -78,6 +78,5 @@
     <%-include('./partials/footer.ejs')%>
     
 </section>
-<!-- <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script> -->
 </body>
 </html>
