mejore sobre nosotros

--- a/src/views/sobre_nosotros.ejs
+++ b/src/views/sobre_nosotros.ejs
@@ -12,15 +12,21 @@
                   <section class="integrantes">
 
                     <article class="contFoto">
-                        <img class="intfoto" src="img/avatars/moreko.jpeg" alt="Moreko">
+                        <a href="https://github.com/Moreko" target="_blank">
+                            <img class="intfoto" src="img/avatars/moreko.jpeg" alt="Moreko">
+                        </a>    
                         <label for="">Moreko</label>
                     </article>
                     <article  class="contFoto">
-                        <img class="intfoto" src="img/avatars/imagen-1610422216948.jpg" alt="Pat">
+                        <a href="" target="_blank">
+                            <img class="intfoto" src="img/avatars/imagen-1610422216948.jpg" alt="Pat">
+                        </a>
                         <label for="">Patricio</label>
                     </article>    
                     <article  class="contFoto">
-                        <img class="intfoto" src="img/avatars/rod.jpg" alt="Rod">
+                        <a href="https://github.com/rodtob" target="_blank">
+                            <img class="intfoto" src="img/avatars/rod.jpg" alt="Rod">
+                        </a>
                         <label for="">Rod</label>
                     </article>
 
@@ -31,8 +37,8 @@
                      programadores de no solo desarrollar
                      apps sino también cerveza.
                      Hoy en día contamos con una variedad
-                     de cervezas a base lúpulo. entre ellas
-                     sus variantes rubia, roja, negra e IPA.
+                     de cervezas a base de lúpulo. Entre ellas
+                     sus variantes de rubia, roja, negra e IPA.
                      Siendo así la primera y única compañía
                      de desarrollo y cerveza del país.
              </p>
