cambie estilos responsive sobre nosotros

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1503,6 +1503,7 @@ ojo con este que se usa en varios lados */
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 14px;
 }
 
 .intfoto{
