--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -49,8 +49,8 @@
                     <small></small>
                 </div>
                 <div>
-                    <label for="laimagen">Avatar</label>
-                    <input type="file" required name="imagen" id="laimagen">
+                    <label for="imagen">Avatar</label>
+                    <input type="file" name="imagen" id="imagen" required>
                     <small></small>
                 </div>
                 <input class="reg--submit" type="submit" value=<%=typeof usuarioActivo.nombre != "undefined" ? "guardar" :  "Registrarme" %> autofocus>
