--- a/src/views/users/deslogeoExitoso.ejs
+++ b/src/views/users/deslogeoExitoso.ejs
@@ -9,12 +9,11 @@
       
         
         <p class="contenedorMain__links">¡Cerraste sesión correctamente!</p> 
-        <br>
+      
 
-        <button href="index" class="btn--volver">
-            <a class="volverInicio" href="/">Volver al inicio</a>
-        </button></a>
-            
+        
+            <a href="/" class="btn--volver">Volver al inicio</a>
+
 
     </main>
     
