--- a/src/views/users/logeoExitoso.ejs
+++ b/src/views/users/logeoExitoso.ejs
@@ -11,13 +11,9 @@
         <p class="contenedorMain__links">¡Bienvenido <%= usuarioActivo.nombre %>!</p> 
         <br>
         <% if(usuarioAdmin){%>
-        <button href="index" class="btn--volver">
-            <a class="volverInicio" href="/products/createForm">Crear nuevo producto</a>
-        </button>
+            <a class="btn--volver" href="/products/createForm">Crear nuevo producto</a>
         <%}%>
-        <button href="index" class="btn--volver">
-            <a class="volverInicio" href="/">Volver al inicio</a>
-        </button></a>
+        <a href="/" class="btn--volver">Volver al inicio</a>
 
         
             
